@@ -191,6 +191,10 @@ with all sufficient information, see the ChangeLog file or Redmine
     * http://blog.rubygems.org/2017/08/27/2.6.13-released.html
     * http://blog.rubygems.org/2017/10/09/unsafe-object-deserialization-vulnerability.html
 
+* SecureRandom
+  * New methods:
+    * SecureRandom.alphanumeric
+
 * Set
   * Add Set#to_s as alias to #inspect [Feature #13676]
   * Add Set#=== as alias to #include? [Feature #13801]
